examples/test/testpolicy13636.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13636
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key25: value35
      key38: value15
      key39: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value7
          key26: value47
      podSelector:
        matchLabels:
          key29: value5
